improved quad reg-exp to account for css units, extra spaces and negative values fixes #1

--- a/test/assets/ltr.css
+++ b/test/assets/ltr.css
@@ -26,6 +26,6 @@ body {
 }
 
 .nav {
-  margin: 10px 5px 10px 8px;
-  padding: 3px 5px 3px 8px;
+  margin: 10px -5em 10% 8pt;
+  padding: 3px -5em 3% 8pt;
 }
